Fixed loader vertical align positioning.

--- a/src/main/vuejs/assets/less/components/loader.less
+++ b/src/main/vuejs/assets/less/components/loader.less
@@ -1,5 +1,6 @@
 ._loading {
     pointer-events: none;
+    min-height: 50px;
     .loader {
         opacity: 1;
     }
@@ -14,12 +15,12 @@
 }
 
 .loader {
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
     pointer-events: none;
     position: absolute;
-    text-align: center;
-    top: 50%;
     width: 100%;
-    height: 100%;
     z-index: 1;
     transition: opacity .4s linear;
     opacity: 0;
